--- a/compose-dev.yaml
+++ b/compose-dev.yaml
@@ -2,5 +2,9 @@ version: "3.9"
 services:
   web:
     build: .
+    volumes:
+      - type: bind
+        source: .
+        target: /code
     ports:
       - "3000:3000"
